Closed Bug 453307 Opened 16 years ago Closed 16 years ago

Building without XUL failed

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Unassigned)

References

Details

Attachments

(1 file)

Attached patch Build fixSplinter Review
mozilla/content/base/src/nsGenericElement.cpp:792: error: 'nsXULElement' was not declared in this scope
mozilla/content/base/src/nsGenericElement.cpp:792: error: 'xul' was not declared in this scope
mozilla/content/base/src/nsGenericElement.cpp:792: error: 'nsXULElement' is not a class or namespace


mozilla/content/base/src/nsGenericElement.cpp:5108: error: invalid use of undefined type 'struct nsICSSParser'
Attachment #336485 - Flags: review?(bzbarsky)
Comment on attachment 336485 [details] [diff] [review]
Build fix

Looks ok, but please use -p and -U8 for future patches!
Attachment #336485 - Flags: superreview+
Attachment #336485 - Flags: review?(bzbarsky)
Attachment #336485 - Flags: review+
Fixed in:
http://hg.mozilla.org/mozilla-central/rev/4eece8396d53
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: