Bug 453307 -  Building without XUL failed. r=bzbarsky.